All Challenges Completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
+    <nav class="navbar">
+        <!-- <a href="/">Home</a> -->
+        <a href="#our-games-section">Go to Our Games</a>
+    </nav>      
     <!-- header row with logo -->
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
@@ -48,8 +52,13 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
+    <h2 id="our-games-section">Our Games</h2>
     <p>Check out each of our games below!</p>
+    <!-- Search Feature -->
+    <div id="search-container">
+        <input type="text" id="search-bar" placeholder="Search for a game..." />
+    </div>      
+
     <div id="button-container">
         <button id="unfunded-btn">Show Unfunded Only</button>
         <button id="funded-btn">Show Funded Only</button>
@@ -60,5 +69,7 @@
     </div>
 
     <script type="module" src="index.js"></script>
+    <!-- Back to top button -->
+    <button id="back-to-top" title="Back to Top">↑ Top</button>
   </body>
 </html>
