--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   </head>
 
   <body>
-    <nav class="navbar">
-        <!-- <a href="/">Home</a> -->
-        <a href="#our-games-section">Go to Our Games</a>
-    </nav>      
+    
     <!-- header row with logo -->
     <div class="header">
-        <img id="tentacles" src="assets/tentacles.png">
-        <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        <div class = "header-left">
+            <img id="tentacles" src="assets/tentacles.png">
+            <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        </div>
+        <div class="header-right">
+            <a href="#our-games-section" class="nav-link">🎮 Our Games</a>
+            <button id="toggle-dark-mode">🌙 Night Mode</button>
+        </div>
+        
     </div>
 
     <!-- background info about company -->
