--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
 
     <script type="module" src="index.js"></script>
     <!-- Back to top button -->
-    <button id="back-to-top" title="Back to Top">↑ Top</button>
+    <button id="back-to-top" title="Back to Top">↑</button>
   </body>
 </html>
