Readme File Updat

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1 class="header-text">Sea Monster Crowdfunding</h1>
         </div>
         <div class="header-right">
+            <a href="/" class="nav-link">🏠 Home</a>
             <a href="#our-games-section" class="nav-link">🎮 Our Games</a>
             <button id="toggle-dark-mode">🌙 Night Mode</button>
         </div>
